Fixed more docker errors, added testing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,29 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet" />
-    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <script>
-      tailwind.config = {
-        darkMode: "class",
-        theme: {
-          extend: {
-            colors: {
-              "primary": "#0066cc",
-              "background-light": "#f5f7f8",
-              "background-dark": "#0f1923",
-            },
-            fontFamily: {
-              "display": ["Inter", "sans-serif"],
-              "sans": ["Inter", "sans-serif"],
-              "mono": ["JetBrains Mono", "monospace"],
-            },
-            boxShadow: {
-              "soft": "rgba(0,0,0,0.05) 0px 0px 20px",
-            }
-          },
-        },
-      }
-    </script>
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <style>
       ::-webkit-scrollbar { width: 8px; height: 8px; }
       ::-webkit-scrollbar-track { background: transparent; }
